Fix: changed bg color to bring more contrast

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html, body{
   font-family: Arial, Helvetica, sans-serif;
+  background:#000;
   display: grid;
   text-align: center;
   justify-content: center;
@@ -27,7 +28,7 @@ input[type=text] {
   padding:1rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  font-weight:bolder;
+  font-weight:normal;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -38,7 +39,7 @@ input[type=text] {
   background-color: #f7e200;
   padding:1rem;
   margin: 0.5rem;
-  font-weight:bolder;
+  font-weight:normal;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -49,7 +50,7 @@ input[type=text] {
   background-color: grey;
   padding:1rem;
   margin: 0.5rem;
-  font-weight:bolder;
+  font-weight:normal;
   border: none;
   border-radius: 5px;
   cursor:unset;
